--- a/public/me.html
+++ b/public/me.html
@@ -6,11 +6,11 @@
     <title>My Bookings</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-100 min-h-screen">
+  <body class="bg-neutral-800 min-h-screen">
     <div class="container mx-auto px-4 py-8">
       <header class="mb-8">
-        <h1 class="text-3xl font-bold text-gray-800">My Bookings</h1>
-        <p class="text-gray-600">
+        <h1 class="text-3xl font-bold text-white">My Bookings</h1>
+        <p class="text-neutral-200">
           View your upcoming and past fitness class bookings.
         </p>
         <nav class="mt-4">
