--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         </h1>
         <p class="mt-4 text-white">
           Start your fitness journey today with Athlenic. Book a class and
-          transform your life.
+          transform your life forever.
         </p>
         <a
           href="/login.html"
