--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,20 @@
   <body
     class="min-h-screen flex flex-col bg-[url('/assets/bg.jpg')] bg-cover bg-center"
   >
-    <!-- Header -->
+     <!-- Header -->
     <header class="bg-black bg-opacity-50 text-white py-4">
       <div class="container mx-auto px-4 flex justify-between items-center">
         <h1 class="text-2xl font-bold">Athlenic</h1>
-        <nav>
-          <a href="/login.html" class="text-white hover:underline">Login</a>
+    <nav class="flex gap-6">
+          <a href="/trainers.html" class="text-white hover:underline tracking-widest font-semibold">
+            CLASSES
+          </a>
+          <a href="/contact.html" class="text-white hover:underline tracking-widest font-semibold">
+            CONTACT AS
+          </a>
+          <a href="/login.html" class="text-white hover:underline tracking-widest font-semibold">
+            LOGIN
+          </a>
         </nav>
       </div>
     </header>
