--- a/public/booking.html
+++ b/public/booking.html
@@ -3,31 +3,52 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Confirm your booking</title>
+    <title>Class Booking</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-neutral-800 min-h-screen">
     <div class="container mx-auto px-4 py-8 max-w-2xl">
-      <h1 class="text-3xl font-bold text-white mb-6">Confirm your booking</h1>
+      <h1 class="text-3xl font-bold text-white mb-6">Class Booking</h1>
 
       <form
         method="POST"
         action="/book"
         class="bg-white p-6 rounded-lg shadow-md space-y-4"
-      >
-        <div>
-          <label for="trainer" class="block text-gray-700 font-semibold mb-2"
-            >Trainer</label
-          >
-          <input
+      > 
+        <div>  <!
+          <label for="trainerBox" class="block font-semibold mb-2">Trainer</label>
+
+          <div class="relative">
+            <input
+              id="trainerBox"
+              type="text"
+              placeholder="Type to search"
+              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+            />
+
+            <!-- dropdown -->
+            <ul
+              id="trainerList"
+              class="absolute z-10 w-full bg-white border border-gray-300 rounded-md mt-1 hidden max-h-40 overflow-y-auto"
+            ></ul>
+          </div>
+
+          <!-- hidden input (value submitted to server) -->
+          <input type="hidden" id="trainer" name="trainer" />
+          <!--เลือกtrainer-->
+          <select
             id="trainer"
             name="trainer"
             class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-            readonly
-          />
-        </div>
-
-        <div>
+          required
+            >
+            <option value="">Daniel Smith</option>
+            <option value="">Emma Wilson</option>
+            <option value="">John Carter</option>
+            <option value="">Michael Brown</option>
+            <option value="">Sophia Miller</option>
+            </select> 
+             <!--Class-->
           <label for="class" class="block text-gray-700 font-semibold mb-2"
             >Class</label
           >
@@ -38,31 +59,25 @@
             readonly
           />
         </div>
-
-        <div>
-          <label for="price" class="block text-gray-700 font-semibold mb-2"
-            >Price (THB)</label
-          >
-          <input
-            id="price"
-            name="price"
-            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-            readonly
+        <!--Price-->
+            <div>
+             <label for="price" class="block text-gray-700 font-semibold mb-2"
+              >Price (THB)</label
+             >
+             <input
+               id="price"
+              name="price"
+              class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+              readonly
           />
         </div>
 
         <div>
-          <label for="date" class="block text-gray-700 font-semibold mb-2"
-            >Day</label
-          >
-          <select
-            id="date"
-            name="date"
-            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-            required
-          ></select>
+          <label class="block text-sm font-medium mb-1">Date</label>
+          <input id="date" type="date" class="w-full border rounded px-3 py-2" />
         </div>
 
+        <!--Time-->
         <div>
           <label for="timeSlot" class="block text-gray-700 font-semibold mb-2"
             >Time</label
@@ -74,7 +89,7 @@
             required
           >
             <option value="">Choose a time</option>
-          </select>
+          </select> <!--เลือกเวลา--> 
           <div id="scheduleNote" class="text-sm text-gray-500 mt-2"></div>
         </div>
 
@@ -92,7 +107,7 @@
 
       <p class="mt-4">
         <a href="/trainers.html" class="text-blue-500 hover:underline"
-          >← Back to trainers</a
+          >← Back to class</a 
         >
       </p>
     </div>
