--- a/public/signup.html
+++ b/public/signup.html
@@ -63,6 +63,18 @@
 
             <div>
               <label class="block text-neutral-200 font-semibold mb-2"
+                >Email</label
+              >
+              <input
+                class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                name="email"
+                placeholder="Enter your email"
+                required
+              />
+            </div>
+            
+            <div>
+              <label class="block text-neutral-200 font-semibold mb-2"
                 >Password</label
               >
               <input
