--- a/public/trainers.html
+++ b/public/trainers.html
@@ -55,7 +55,7 @@
         if (!root) return;
         root.innerHTML = "";
 
-        ClASSES.forEach((c, i) => {
+        CLASSES.forEach((c, i) => {
           const card = document.createElement("div");
           card.className = "bg-neutral-100 p-6 rounded-lg shadow-md";
 
