--- a/public/booking.html
+++ b/public/booking.html
@@ -191,7 +191,7 @@ function coerceScheduleToArray(raw) {
     });
 
     // 👀 ช่วย debug
-    // console.log("BUILT SCHEDULE →", sched, "(raw:", trainer.schedule, ")");
+     console.log("BUILT SCHEDULE →", sched, "(raw:", trainer.schedule, ")");
     return sched;
   }
       function getFirstAvailableDate(sched, maxDays = 90, preferISO) {
